$Id: History,v 1.7 2001-01-25 16:42:55 urban Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
24 jan 01: L. Urban
- bug fixed in muon bremstrahlung , in G4MuBremstrahlung.cc 
   in PostStepDoIt.
 
16 jan 01: mma (muons-V03-00-00)
- small corrections in MuEnergyLoss.cc L.Urban 11-01-01
     
08 nov 00: mma (muons-V02-00-03)
- signature in GetLossWithFluct changed L.Urban 30/10/00
     
11 aug 00: mma (muons-V02-00-01)

03 aug 00: gc (muons-V02-00-00r)
- G4VIMuEnergyLoss.cc: changed RandGauss to G4RandGauss to fix problem of
  events' reproducibility.
     
07 jun 00: mma (muons-V01-01-03)
- virtual destructor for G4VEnergyLoss

24 may 00: mma (muons-V01-01-02)
- revision of brems,pair,ionisation,munuclear
  by Laszlo, Rotislav, Andrew
        
27 apr 00 mma  (em-V01-01-01)
- G4endl (dec/iso)      
     
26 apr 00 mma  (em-V01-01-00)
- all EnergyLoss classes renamed G4V... 
  Most classes in standard and muons affected.
- G4Muls moved in utils
- bugs fixe in MuPairProduction  
- cowork with geant4-01-01-ref-02
     
02 mar 00 mma  (em-V01-00-00)
- new G4VEnergyLoss class and related structure
- cowork with geant4-01-00-ref-06
     
10 nov 99 mma  (em-V00-01-03)
- migration to STL: remove RWT hash dictionnary
