@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4IMuPairProduction.cc,v 1.5 2000-04-25 14:19:01 maire Exp $
+// $Id: G4IMuPairProduction.cc,v 1.6 2001-02-05 17:50:29 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // $Id: 
@@ -809,6 +809,7 @@ void G4IMuPairProduction::BuildLambdaTable(const G4ParticleDefinition& ParticleT
       delete theMeanFreePathTable;
    }
    theMeanFreePathTable = new G4PhysicsTable( G4Material::GetNumberOfMaterials() ) ;
+   PartialSumSigma.clearAndDestroy();
    PartialSumSigma.resize(G4Material::GetNumberOfMaterials());
 
    if(&ParticleType == theMuonPlus )
@@ -854,7 +855,7 @@ void G4IMuPairProduction::ComputePartialSumSigma(const G4ParticleDefinition* Par
    G4double ElectronEnergyCut = (G4Electron::GetCutsInEnergy())[Imate];
    G4double PositronEnergyCut = (G4Positron::GetCutsInEnergy())[Imate];
 
-   PartialSumSigma(Imate) = new G4ValVector(NbOfElements);
+   PartialSumSigma[Imate] = new G4DataVector();
 
    G4double SIGMA = 0. ;
 
@@ -865,7 +866,7 @@ void G4IMuPairProduction::ComputePartialSumSigma(const G4ParticleDefinition* Par
                                                  (*theElementVector)(Ielem)->GetZ(), 
                                                  ElectronEnergyCut,PositronEnergyCut );
 
-        PartialSumSigma(Imate)->insertAt(Ielem, SIGMA);
+        PartialSumSigma[Imate]->push_back(SIGMA);
    }
 }
 
@@ -1403,12 +1404,12 @@ G4Element* G4IMuPairProduction::SelectRandomAtom(G4Material* aMaterial) const
   const G4int NumberOfElements = aMaterial->GetNumberOfElements();
   const G4ElementVector* theElementVector = aMaterial->GetElementVector();
 
-  G4double rval = G4UniformRand()*((*PartialSumSigma(Index))(NumberOfElements-1));
+  G4double rval = G4UniformRand()*((*PartialSumSigma[Index])[NumberOfElements-1]);
 
   for ( G4int i=0; i < NumberOfElements; i++ )
   {
 
-    if (rval <= (*PartialSumSigma(Index))(i)) return ((*theElementVector)(i));
+    if (rval <= (*PartialSumSigma[Index])[i]) return ((*theElementVector)(i));
   }
   G4cout << " WARNING !!! - The Material '"<< aMaterial->GetName()
        << "' has no elements, NULL pointer returned." << G4endl;
