@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4SynchrotronRadiation.hh,v 1.3 2000-11-01 15:30:46 gcosmo Exp $
+// $Id: G4SynchrotronRadiation.hh,v 1.4 2001-02-05 17:53:51 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ------------------------------------------------------------
@@ -43,7 +43,6 @@
 #include "G4Positron.hh"
 
 
-#include "G4OrderedTable.hh" 
 #include "G4PhysicsTable.hh"
 #include "G4PhysicsLogVector.hh"
  
